tests/format/misc/errors/scss/__snapshots__/format.test.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`less-syntax.less [scss] format 1`] = `
"CssSyntaxError: Unknown word (1:4)
> 1 | a {.bordered();}
    |    ^
  2 |
Cause: <css input>:1:4: Unknown word"
`;
